Fix visibility and spacing in index.html styling

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
   font-weight: bold;
   font-size: 25px;
   text-align: center;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 .ref-links {
@@ -51,10 +51,9 @@ li {
 }
 
 .ref-links a:hover {
-  text-decoration: none;
+  text-decoration: underline solid;
   text-decoration-color: blue;
   color: blue;
-  border: 2px solid blue;
 }
 
 .ref-links a::after {
